--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "cross-env NODE_ENV=test jest",
+    "update": "cross-env NODE_ENV=test jest --updateSnapshot"
   },
   "repository": {
     "type": "git",
@@ -20,8 +21,13 @@
   "homepage": "https://github.com/postor/puppeteer-recorder-jest#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cross-env": "^5.2.0",
+    "differencify": "^1.5.1",
     "express": "^4.16.4",
     "fs-extra": "^7.0.0",
+    "jest": "^23.6.0",
+    "lodash.template": "^4.4.0",
+    "moment": "^2.22.2",
     "next": "^7.0.1",
     "node-json-db": "^0.9.1",
     "react": "^16.5.2",
