--- a/launch.json
+++ b/launch.json
@@ -1,4 +1,4 @@
 {
-  "executablePath":"C:\\Users\\R720\\AppData\\Local\\Google\\Chrome SxS\\Application\\chrome.exe",
+  "executablePath":"C:\\Users\\postor\\AppData\\Local\\Google\\Chrome SxS\\Application\\chrome.exe",
   "headless":false
 }
